--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,6 @@ input {
     height: 20px; 
 } 
 .icon { 
-    margin-left: 5px; 
     width: 20px; 
     height: 20px; 
     margin-right: 5px;
@@ -29,4 +28,16 @@ input {
 .label { 
     margin-right: 5px; 
     margin-left: 5px;
+}
+@keyframes fadein {
+    from {bottom: 0; opacity: 0;} 
+    to {bottom: 30px; opacity: 1;}
+}
+@keyframes fadeout {
+    from {bottom: 30px; opacity: 1;} 
+    to {bottom: 0; opacity: 0;}
+}
+.short-input { 
+    width: 50px; 
+    margin-right: 5px; 
 }
