--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
 body { 
     font-family: Arial, sans-serif; 
     padding: 10px; 
+    background-color: #f7cc6f;
+    position: relative;
 }
 .title {
     text-align: center;
+    font-family: "Bagel Fat One", system-ui;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 9vw;
 }
 .input-container { 
     display: flex; 
@@ -12,7 +18,12 @@ body {
 }
 input { 
     flex: 1; 
-    padding: 5px; 
+    padding: 5px;
+    border: 2px solid #000;
+    border-radius: 5px;
+    line-height: normal;
+    color: #282828;
+    box-sizing: border-box;
 }
 .copy-icon { 
     cursor: pointer; 
@@ -21,13 +32,17 @@ input {
     height: 20px; 
 } 
 .icon { 
-    width: 20px; 
-    height: 20px; 
+    width: 22px; 
+    height: 22px; 
     margin-right: 5px;
 }
 .label { 
     margin-right: 5px; 
     margin-left: 5px;
+    font-family: "Comfortaa", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
 }
 @keyframes fadein {
     from {bottom: 0; opacity: 0;} 
@@ -40,4 +55,55 @@ input {
 .short-input { 
     width: 50px; 
     margin-right: 5px; 
+}
+.bug-report {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    text-decoration: none;
+}
+.bug-icon {
+    width: 20px;
+    height: 20px;
+}
+.button-35 {
+  align-items: center;
+  background-color: #fff;
+  border-radius: 3px;
+  box-shadow: transparent 0 0 0 3px,rgba(18, 18, 18, .1) 0 3px 6px;
+  box-sizing: border-box;
+  color: #121212;
+  cursor: pointer;
+  display: inline-flex;
+  flex: 1 1 auto;
+  font-family: Inter,sans-serif;
+  font-size: 0.8rem;
+  font-weight: 700;
+  justify-content: center;
+  line-height: 1;
+  margin: 0;
+  outline: none;
+  padding: 0.2rem 0.5rem;
+  text-align: center;
+  text-decoration: none;
+  transition: box-shadow .2s,-webkit-box-shadow .2s;
+  white-space: nowrap;
+  border: 0;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-35:hover {
+  box-shadow: #121212 0 0 0 2px, transparent 0 0 0 0;
+}
+
+.delete-button { 
+    margin-left: 5px; 
+}
+.snackbar {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+    margin-top: 2px;
 }
