--- a/styles.css
+++ b/styles.css
@@ -26,12 +26,7 @@ input {
     color: #282828;
     box-sizing: border-box;
 }
-.copy-icon { 
-    cursor: pointer; 
-    margin-left: 5px; 
-    width: 20px; 
-    height: 20px; 
-} 
+
 .icon { 
     width: 20px;
     height: 20px;
@@ -156,9 +151,6 @@ input {
     box-shadow: #121212 0 0 0 2px, transparent 0 0 0 0;
 }
 
-.delete-button { 
-    margin-left: 5px; 
-}
 .snackbar {
     font-family: "Poppins", sans-serif;
     font-weight: 500;
@@ -172,20 +164,23 @@ input {
     margin-bottom: 10px;
 }
 
-.edit-icon, .delete-icon, .copy-icon {
+.edit-icon, .button-35.delete-button, .button-35.plus-button, .copy-icon {
+    flex: none;
     width: 20px;
     height: 20px;
     cursor: pointer;
     margin-left: 5px;
 }
 
-.edit-icon, .delete-icon {
-    display: none;
+.button-35.save-button, .button-35.auto-save-enabled {
+    height: 20px;
+    flex: none;
+    width: min-content;
 }
 
 .button-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
     margin-top: 10px;
 }
 
